// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivityElementDifficultyStars should render with 0 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt="Platzhalter-Icon"
      class="opacity-60"
      src="diffculties-adaptivity-placeholder.svg"
    />
    <img
      alt="Platzhalter-Icon"
      class="opacity-60"
      src="diffculties-adaptivity-placeholder.svg"
    />
    <img
      alt="Platzhalter-Icon"
      class="opacity-60"
      src="diffculties-adaptivity-placeholder.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 1 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-required-solved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-required-solved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-required-solved-icon.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 1.7976931348623157e+308 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt=""
      class=""
    />
    <img
      alt=""
      class=""
    />
    <img
      alt=""
      class=""
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 2 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt=""
      class=""
      src=""
    />
    <img
      alt=""
      class=""
      src=""
    />
    <img
      alt=""
      class=""
      src=""
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 3 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-required-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-required-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-required-unsolved-icon.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 4 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-solved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-solved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-solved-icon.svg"
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 5 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt=""
      class=""
      src=""
    />
    <img
      alt=""
      class=""
      src=""
    />
    <img
      alt=""
      class=""
      src=""
    />
  </div>
</div>
`;

exports[`AdaptivityElementDifficultyStars should render with 6 for each difficulty 1`] = `
<div>
  <div
    class="flex items-center h-full"
  >
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-unsolved-icon.svg"
    />
    <img
      alt=""
      class=""
      src="diffculties-adaptivity-unsolved-icon.svg"
    />
  </div>
</div>
`;
